--- a/PlataformaMulticanalFrontend/Views/Shared/_Layout.cshtml
+++ b/PlataformaMulticanalFrontend/Views/Shared/_Layout.cshtml
@@ -16,6 +16,8 @@
     
     <!-- Custom CSS -->
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    
+    @await RenderSectionAsync("Styles", required: false)
 </head>
 <body>
     <!-- Top Header Bar -->
